--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,6 @@ img {
   object-fit: cover;
 }
 
-button {
-  cursor: pointer;
-}
-
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -53,6 +49,46 @@ button {
   margin-left: auto;
   margin-right: auto;
 }
+
+/* buttonS */
+button {
+  cursor: pointer;
+}
+
+.btn {
+  display: flex;
+  border-radius: 4px;
+  height: 50px;
+  min-width: 200px;
+  padding: 10px;
+   
+  background-color: var(--main-blue);
+  color: var(--white);
+  
+  border: none;
+  
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 0.06em;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero .btn ,.modal .btn {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.btn:hover,
+.btn:focus {
+  background-color: #188CE8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
 
 /* Шапка */
 .header {
@@ -202,33 +238,6 @@ button {
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
-}
-
-.hero-btn {
-  display: inline-block;
-  border-radius: 4px;
-  min-width: 200px;
-  padding: 10px 32px;
-  margin-left: auto;
-  margin-right: auto;
-  
-  background-color: var(--main-blue);
-  color: var(--white);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border: none;
-  
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  text-align: center;
-  letter-spacing: 0.06em;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.hero-btn:hover,
-.hero-btn:focus {
-  background-color: #188CE8;
 }
 
 /* /Sections&grid */
@@ -434,8 +443,7 @@ button {
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
-}
+  }
 
 .customers-list a:hover, 
 .customers-list a:focus {
@@ -492,24 +500,51 @@ button {
   color: var(--main-blue);
 }
 
-.sign-icon { fill: red;}
-
 /* Присоеденяйтесь */
 
 .join-us {
   margin-left: 70px;
+  margin-right: 93px;
 } 
 
-.join-title {
+.join-title, .sign-title {
+  margin-top: 0;
+  margin-bottom: 20px;
+  
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  margin-bottom: 20px;
+  
   color: var(--white);
 }
 
+/* Подписывайтесь на рассылку */
 
+.sign form {
+  display: flex;
+}
+
+.sign input {
+  margin-right: 12px;
+  padding: 15px 16px;
+
+  height: 50px;
+  width: 358px;
+
+  line-height: 1.25;
+  color: var(--text-white6);
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+ 
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.sign-icon { 
+  margin-left: 10px;
+  fill: var(--white);
+}
 
 /* Портфолио */
 
@@ -678,6 +713,7 @@ button {
   position: absolute;
   top: 50%;
   left: 50%;
+  padding: 40px;
     
   width: 528px;
   min-height: 528px;
@@ -692,7 +728,7 @@ button {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal button {
+.modal-close-btn {
   position: absolute;
   left: calc(100% - 38px);
   top: 8px;
@@ -703,4 +739,9 @@ button {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: var(--white);
+}
+
+.modal form {
+  display: flex;
+  flex-direction: column;
 }
