--- a/css/style.css
+++ b/css/style.css
@@ -728,6 +728,21 @@ button {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-title {
+  margin: 0;
+  margin-bottom: 12px;
+  
+  font-weight: 700;
+  font-size: 20px;
+  color: var(--title-grey);
+  text-align: center;
+}  
+
 .modal-close-btn {
   position: absolute;
   left: calc(100% - 38px);
@@ -740,8 +755,20 @@ button {
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: var(--white);
 }
+.modal label { 
 
-.modal form {
-  display: flex;
-  flex-direction: column;
+  margin-bottom: 4px;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1,167;
+   
+  letter-spacing: 0.01em;
+}  
+
+.modal input {
+  padding: 12px 16px;
+  margin-bottom: 10px;
 }
+
+.modal input:last-of-type {margin-bottom: 20px;}
