--- a/css/style.css
+++ b/css/style.css
@@ -541,6 +541,14 @@ button {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
+.sign input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
 .sign-icon { 
   margin-left: 10px;
   fill: var(--white);
@@ -755,6 +763,7 @@ button {
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: var(--white);
 }
+
 .modal label { 
 
   margin-bottom: 4px;
@@ -766,9 +775,30 @@ button {
   letter-spacing: 0.01em;
 }  
 
-.modal input {
-  padding: 12px 16px;
+.modal input, textarea {
+  padding: 12px;
   margin-bottom: 10px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
 }
 
-.modal input:last-of-type {margin-bottom: 20px;}
+textarea {
+  resize: none;
+  padding: 12px 16px;
+
+  margin-bottom: 20px;
+  min-height: 120px;
+}
+
+textarea::placeholder {
+  font-size: 14px;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+label.agree {
+  font-size: 14px;
+  line-height: 1,71;
+  letter-spacing: 0.03em;
+}
