--- a/css/style.css
+++ b/css/style.css
@@ -724,7 +724,7 @@ button {
   padding: 40px;
     
   width: 528px;
-  min-height: 528px;
+  min-height: 581px;
   
   background-color: var(--white);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -798,7 +798,19 @@ textarea::placeholder {
 }
 
 label.agree {
+  margin-left: 6px;
   font-size: 14px;
   line-height: 1,71;
   letter-spacing: 0.03em;
+}
+
+label.agree a {
+  color: var(--main-blue);
+  text-decoration: underline var(--main-blue);
+ 
+}
+
+.agree-check { 
+  display: flex;
+  margin-bottom: 30px;
 }
