--- a/css/style.css
+++ b/css/style.css
@@ -443,7 +443,7 @@ button {
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+}
 
 .customers-list a:hover, 
 .customers-list a:focus {
@@ -741,6 +741,9 @@ button {
   flex-direction: column;
 }
 
+
+
+
 .modal-title {
   margin: 0;
   margin-bottom: 12px;
@@ -773,6 +776,8 @@ button {
   line-height: 1,167;
    
   letter-spacing: 0.01em;
+
+  cursor: pointer;
 }  
 
 .modal input, textarea {
@@ -781,6 +786,13 @@ button {
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+ 
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal input:focus, textarea:focus{
+  border: 1px solid #2196F3;
+  outline: none;
 }
 
 textarea {
@@ -797,6 +809,22 @@ textarea::placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
 
+.input-wrapper {
+  position: relative;
+}
+
+.input-wrapper input {
+  width: 100%;
+}
+
+.modal-icon {
+  position: absolute;
+  fill: var(--title-grey);
+  
+  left: 0;
+}
+
+/* Cоглашение с условиями договора */
 label.agree {
   margin-left: 6px;
   font-size: 14px;
@@ -807,7 +835,6 @@ label.agree {
 label.agree a {
   color: var(--main-blue);
   text-decoration: underline var(--main-blue);
- 
 }
 
 .agree-check { 
@@ -829,6 +856,9 @@ label.agree a {
 .agree-check use {
   opacity: 0;
 }
+
+
+
 
 .agree-check use:hover {
   opacity: 1;
