--- a/css/style.css
+++ b/css/style.css
@@ -741,9 +741,6 @@ button {
   flex-direction: column;
 }
 
-
-
-
 .modal-title {
   margin: 0;
   margin-bottom: 12px;
@@ -781,7 +778,8 @@ button {
 }  
 
 .modal input, textarea {
-  padding: 12px;
+  padding: 11px;
+  padding-left: 40px;
   margin-bottom: 10px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -819,9 +817,11 @@ textarea::placeholder {
 
 .modal-icon {
   position: absolute;
-  fill: var(--title-grey);
-  
   left: 0;
+  top: 0;
+  fill: var(--title-grey);
+
+  transform: translate(12px,11px);
 }
 
 /* Cоглашение с условиями договора */
@@ -856,7 +856,6 @@ label.agree a {
 .agree-check use {
   opacity: 0;
 }
-
 
 
 
