--- a/css/style.css
+++ b/css/style.css
@@ -770,7 +770,7 @@ button {
 
   font-weight: 400;
   font-size: 12px;
-  line-height: 1,167;
+  line-height: 1.167;
    
   letter-spacing: 0.01em;
 
@@ -789,7 +789,7 @@ button {
 }
 
 .modal input:focus, textarea:focus{
-  border: 1px solid #2196F3;
+  border: 1px solid var(--main-blue);
   outline: none;
 }
 
@@ -822,53 +822,47 @@ textarea::placeholder {
   fill: var(--title-grey);
 
   transform: translate(12px,11px);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal input:focus+.modal-icon{
+  fill: var(--main-blue);
 }
 
 /* Cоглашение с условиями договора */
 label.agree {
-  margin-left: 6px;
+  display: flex;
+  margin-bottom: 30px;
+  
   font-size: 14px;
-  line-height: 1,71;
+  line-height: 1.71;
   letter-spacing: 0.03em;
+  justify-content: center;
 }
 
 label.agree a {
+  margin-left: 5px;
   color: var(--main-blue);
   text-decoration: underline var(--main-blue);
 }
 
-.agree-check { 
-  display: flex;
-  margin-bottom: 30px;
+.check-icon {
+  margin-right: 7px;
+  align-self: center;
+  border: 2px solid var(--title-grey);
+  border-radius: 2px;
 }
 
-.agree-check input {
-  position: relative;
+.check-icon use {
   opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.agree-check svg {
-  position: absolute;
-  border: var(--title-grey) 2px solid;
-  border-radius: 20%;
-}
-
-.agree-check use {
-  opacity: 0;
-}
-
-
-
-.agree-check use:hover {
-  opacity: 1;
-  fill: red;
-}
-
-.agree-check svg:hover {
+.agree-check:checked + .check-icon {
   border: none;
-  background-color: var(--main-blue);
 }
 
-input.agree:checked {
-  
+.agree-check:checked + .check-icon use {
+  opacity: 1;
 }
+
